Fix: now navbar item vertically align center

--- a/assets/css/styleF.css
+++ b/assets/css/styleF.css
@@ -45,6 +45,7 @@ header nav {
 }
 header nav ul {
   display: flex;
+  align-items: center;
   gap: 26px;
 }
 header nav ul li a {
